--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 certifi==2024.8.30
 charset-normalizer==3.4.0
 idna==3.10
+instapi @ git+https://github.com/instap-app/python-api@541f7ce2e3f6d91b6da9503a03e38c981b4c19d0
+python-dotenv==1.0.1
 requests==2.32.3
+slugify==0.0.1
 unicode==2.9
 urllib3==2.2.3
